[package]
name = "redschnorr"
version = "0.1.0"
readme = "README.md"
license = "BSD-3-Clause"
exclude = [ ".gitignore" ]

[dependencies.curve25519-dalek]
version = "0.19"
default-features = false

[dependencies.rand]
version = "0.5"
default-features = false
features = ["i128_support"]

[dependencies.digest]
version = "^0.7"

[dependencies.generic-array]
# same version that digest depends on
version = "0.9"

[dependencies.serde]
version = "^1.0"
optional = true

[dependencies.sha2]
version = "^0.7"
optional = true

[dependencies.failure]
version = "^0.1.1"
default-features = false

[dependencies.clear_on_drop]
version = "0.2"

[dev-dependencies]
hex = "^0.3"
sha2 = "^0.7"
bincode = "^0.9"
criterion = "0.2"
